--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                     </p>
 
                     <p>
-                    Originally built by <a href="http://www.amandaghassaei.com/" target="_blank">Amanda Ghassaei</a> as a final project for <a href="http://courses.csail.mit.edu/6.849/spring17/" target="_blank">Geometric Folding Algorithms</a>.
+                    Originally built by <a href="https://amandaghassaei.com/" target="_blank">Amanda Ghassaei</a> as a final project for <a href="http://courses.csail.mit.edu/6.849/spring17/" target="_blank">Geometric Folding Algorithms</a>.
                     Other contributors include <a href="http://www.cgg.cs.tsukuba.ac.jp/~sasaki_k/" target="_blank">Sasaki Kosuke</a>, <a href="http://erikdemaine.org/" target="_blank">Erik Demaine</a>, and <a href="https://github.com/amandaghassaei/OrigamiSimulator/graphs/contributors" target="_blank">others</a>.
                     Code available on <a href="https://github.com/amandaghassaei/OrigamiSimulator" target="_blank">Github</a>.  If you have interesting crease patterns that would
                     make good demo files, please send them to me (Amanda) so I can add them to the <b>Examples</b> menu.  My email address is on my website.  Thanks!<br/>
@@ -938,8 +938,9 @@
                             <li><a href="#" class="demo author" data-author="miuraOri" data-url="Tessellations/miura-ori.svg">Miura-Ori</a></li>
                             <li><a href="#" class="demo author" data-author="miuraOri" data-url="Tessellations/miura_sharpangle.svg">Miura-Ori (sharp angle)</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/waterbomb.svg">Waterbomb</a></li>
-                            <li><a href="#" class="demo author" data-author="whirlpool" data-url="Tessellations/whirlpool.svg">Whirlpool</a></li>
-                            <li><a href="#" class="demo author" data-author="gardner" data-url="Tessellations/FTpoly7.svg">Flower Tower (Flat)</a></li>
+                            <li><a href="#" class="demo author" data-author="whirlpool" data-url="Tessellations/whirlpool.svg">Whirlpool Spiral</a></li>
+                            <li><a href="#" class="demo author" data-author="gardner" data-url="Tessellations/FTpoly7.svg">Flower Tower (flat foldable)</a></li>
+                            <li><a href="#" class="demo author" data-author="kendrickSmocked" data-url="Tessellations/HexTriFlatFoldableTess.svg">Hex/Tri Tessellation (flat foldable)</a></li>
                             <li class="divider"></li>
                             <li><a href="#" class="demo author" data-author="huffmanTessellations" data-url="Tessellations/huffmanExtrudedBoxes.svg">Huffman Extruded Boxes</a></li>
                             <li><a href="#" class="demo author" data-author="huffmanTessellations" data-url="Tessellations/huffmanWaterbomb.svg">Huffman Waterbombs</a></li>
@@ -968,6 +969,10 @@
                             <li><a href="#" class="demo author cc" data-author="mitaniCCbook" data-url="Curved/Rotating_Star.svg">Rotating Star</a></li>
                             <li><a href="#" class="demo author cc" data-author="mitaniCCbook" data-url="Curved/Crossing_curves.svg">Crossing Curves</a></li>
                             <li><a href="#" class="demo author cc" data-author="mitaniCCbook" data-url="Curved/Treble_Clef.svg">Treble Clef</a></li>
+                            <li><a href="#" class="demo author cc" data-author="lukasheva" data-url="Curved/Leaf_pattern_Opus_T-69.svg">Leaf Pattern (Opus T-69)</a></li>
+                            <li><a href="#" class="demo author cc" data-author="lukasheva" data-url="Curved/Sweet_Dreams_Opus_T-41.svg">Sweet Dreams (Opus T-41)</a></li>
+                            <li><a href="#" class="demo author cc" data-author="lukasheva" data-url="Curved/Improvisation-62.svg">Improvisation 62</a></li>
+                            <li><a href="#" class="demo author cc" data-author="fellerKwan" data-url="Curved/HexSpiralTess.svg">Triangle Spidron Tessellation</a></li>
                             <li><a href="#" class="demo author" data-author="huffmanCurved" data-url="Curved/huffmanTower.svg">Huffman Tower</a></li>
                             <li><a href="#" class="demo" data-url="Curved/CircularPleat-antiFacet.svg">Circular Pleat</a></li>
                             <li><a href="#" class="demo author" data-author="sam" data-url="Curved/shell14.svg">14 Panel Shell</a></li>
@@ -978,6 +983,8 @@
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo author" data-author="miyamotoHappy" data-url="Kirigami/miyamotoTower.svg">Miyamoto Tower</a></li>
                             <li><a href="#" class="demo" data-url="Kirigami/honeycombKiri.svg">Kirigami Honeycomb</a></li>
+                            <li><a href="#" class="demo author" data-author="milliron" data-url="Kirigami/auxetic_triangle.svg">Auxetic Triangle Tessellation</a></li>
+                            <li><a href="#" class="demo author" data-author="kreuter" data-url="Kirigami/triPerfTess.svg">Perforated Triangle Tessellation</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-submenu">
@@ -1902,6 +1909,9 @@
         <div id="sam">
             Designed by <a href="http://www.mit.edu/~calisch/" target="_blank">Sam Calisch</a>.
         </div>
+        <div id="kreuter">
+            Designed by <a href="http://www.eascay.eu/" target="_blank">Johann Kreuter</a>.
+        </div>
         <div id="mitani">
             Designed by <a href="https://mitani.cs.tsukuba.ac.jp/en/" target="_blank">Jun Mitani</a>.
         </div>
@@ -1910,6 +1920,12 @@
         </div>
         <div id="mitani3Dbook">
             Designed by <a href="https://mitani.cs.tsukuba.ac.jp/en/" target="_blank">Jun Mitani</a>, crease pattern from the book <a href="https://mitani.cs.tsukuba.ac.jp/book/3d_origami_art/index.html" target="_blank">3D Origami Art</a>.
+        </div>
+        <div id="fellerKwan">
+            Designed by <a href="https://www.instagram.com/polyscopes/" target="_blank">Kendrick Feller</a> based on the Spidron Tessellation by Daniel Kwan and similar spiral tessellations by Ekaterina Lukasheva.
+        </div>
+        <div id="fellerSmocked">
+            Designed by <a href="https://www.instagram.com/polyscopes/" target="_blank">Kendrick Feller</a> based on a <a href="https://www.flickr.com/photos/dasssa/12455183674" target="_blank">smocked pattern</a> based on the origami of Alessandro Bebber.
         </div>
         <div id="popupology">
             Designed by Elod Beregszaszi, original patterns available at <a href="http://www.popupology.co.uk/galleries" target="_blank">
@@ -1921,7 +1937,7 @@
         </div>
         <div id="whirlpool">
             Designed by Tomoko Fuse.  Crease pattern by <a href="http://www.happyfolding.com/" target="_blank">
-            Sara Adams</a> - video of the design process on <a href="https://www.youtube.com/watch?v=k1BH_FEUZWo" target="_blank">YouTube</a>.
+            Sara Adams</a>.  Create your own variations using David O'Sullivan's <a href="https://observablehq.com/@dosull/tomoko-fuse-spiral-crease-patterns" target="_blank"></a>parametric whirlpool design tool</a>.
         </div>
         <div id="miyamotoHappy">
             Designed by <a href="https://www.flickr.com/photos/yoshinobu_miyamoto/" target="_blank">Yoshinobu Miyamoto</a>.  Crease
@@ -1945,6 +1961,13 @@
         </div>
         <div id="konjevod">
             Designed by <a href="https://www.organicorigami.com/" target="_blank">Goran Konjevod</a>.  Try folding these to ~65% and letting them settle to a curved shape.
+        </div>
+        <div id="milliron">
+            Designed by Garrett Milliron based on the paper <a href="https://www.pnas.org/content/116/52/26407" target="_blank">"Programmable active kirigami metasheets with more freedom of actuation."</a>
+            Generate more variations in <a href="https://observablehq.com/@gradies/auxetic-pleated-kirigami" target="_blank">this parametric design tool</a> for auxetic pleated kirigami.
+        </div>
+        <div id="lukasheva">
+            Designed by <a href="https://www.instagram.com/ekaterina.lukasheva/" target="_blank">Ekaterina Lukasheva</a>.
         </div>
     </div>
 </div>
