--- a/index.html
+++ b/index.html
@@ -960,6 +960,8 @@
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Curved Creases<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
+                            <!-- Using class "cc" causes the example to be loaded with the curved crease checkbox enabled -->
+                            <!-- Some examples already have rulings drawn in and don't need the cc importer -->
                             <li><a href="#" class="demo author cc" data-author="mitani" data-url="Curved/wavy_pleats.svg">Wavy Pleats</a></li>
                             <li><a href="#" class="demo author cc" data-author="mitaniCCbook" data-url="Curved/Tri-Wing_Boomerang_Tiling.svg">Boomerang Tessellation</a></li>
                             <li><a href="#" class="demo author cc" data-author="mitani3Dbook" data-url="Curved/Origami_Sphere_16Flaps.svg">Origami Sphere</a></li>
