--- a/index.html
+++ b/index.html
@@ -1931,7 +1931,7 @@
             Designed by <a href="https://www.instagram.com/polyscopes/" target="_blank">Kendrick Feller</a> based on the Spidron Tessellation by Daniel Kwan and similar spiral tessellations by Ekaterina Lukasheva.
         </div>
         <div id="fellerSmocked">
-            Designed by <a href="https://www.instagram.com/polyscopes/" target="_blank">Kendrick Feller</a> based on a <a href="https://www.flickr.com/photos/dasssa/12455183674" target="_blank">smocked pattern</a> based on the origami of Alessandro Bebber.
+            Designed by <a href="https://www.instagram.com/polyscopes/" target="_blank">Kendrick Feller</a> based on a <a href="https://www.flickr.com/photos/dasssa/12455183674" target="_blank">smocked pattern</a> based on the origami of Alessandro Beber.
         </div>
         <div id="popupology">
             Designed by Elod Beregszaszi, original patterns available at <a href="http://www.popupology.co.uk/galleries" target="_blank">
@@ -1943,7 +1943,7 @@
         </div>
         <div id="whirlpool">
             Designed by Tomoko Fuse.  Crease pattern by <a href="http://www.happyfolding.com/" target="_blank">
-            Sara Adams</a>.  Create your own variations using David O'Sullivan's <a href="https://observablehq.com/@dosull/tomoko-fuse-spiral-crease-patterns" target="_blank"></a>parametric whirlpool design tool</a>.
+            Sara Adams</a>.  Create your own variations using David O'Sullivan's <a href="https://observablehq.com/@dosull/tomoko-fuse-spiral-crease-patterns" target="_blank">parametric whirlpool design tool</a>.
         </div>
         <div id="miyamotoHappy">
             Designed by <a href="https://www.flickr.com/photos/yoshinobu_miyamoto/" target="_blank">Yoshinobu Miyamoto</a>.  Crease
