--- a/index.html
+++ b/index.html
@@ -972,16 +972,14 @@
                             <li><a href="#" class="demo author cc" data-author="mitaniCCbook" data-url="Curved/Crossing_curves.svg">Crossing Curves</a></li>
                             <li><a href="#" class="demo author cc" data-author="mitaniCCbook" data-url="Curved/Treble_Clef.svg">Treble Clef</a></li>
                             <li class="divider"></li>
+                            <li><a href="#" class="demo author cc" data-author="lukashevaCCbook" data-url="Curved/Leafy_Opus_T-69.svg">Leafy (Opus T-69)</a></li>
+                            <li><a href="#" class="demo author cc" data-author="lukasheva" data-url="Curved/Sweet_Dreams_Opus_T-41.svg">Sweet Dreams (Opus T-41)</a></li>
+                            <li><a href="#" class="demo author cc" data-author="lukasheva" data-url="Curved/Improvisation-62.svg">Improvisation 62</a></li>
+                            <li class="divider"></li>
                             <li><a href="#" class="demo author" data-author="huffmanCurved" data-url="Curved/huffmanTower.svg">Huffman Tower</a></li>
                             <li><a href="#" class="demo author cc" data-author="fellerKwan" data-url="Curved/HexSpiralTess.svg">Hex Spiral Tessellation</a></li>
                             <li><a href="#" class="demo" data-url="Curved/CircularPleat-antiFacet.svg">Circular Pleat</a></li>
                             <li><a href="#" class="demo author" data-author="sam" data-url="Curved/shell14.svg">14 Panel Shell</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#" class="demo author cc" data-author="lukasheva" data-url="Curved/Leaf_pattern_Opus_T-69.svg">Leaf Pattern (Opus T-69)</a></li>
-                            <li><a href="#" class="demo author cc" data-author="lukasheva" data-url="Curved/Sweet_Dreams_Opus_T-41.svg">Sweet Dreams (Opus T-41)</a></li>
-                            <li><a href="#" class="demo author cc" data-author="lukasheva" data-url="Curved/Improvisation-62.svg">Improvisation 62</a></li>
-                            <li class="divider"></li>
-                            
                         </ul>
                     </li>
                     <li class="dropdown-submenu">
@@ -1974,6 +1972,9 @@
         </div>
         <div id="lukasheva">
             Designed by <a href="https://www.instagram.com/ekaterina.lukasheva/" target="_blank">Ekaterina Lukasheva</a>.
+        </div>
+        <div id="lukashevaCCbook">
+            Designed by <a href="https://www.instagram.com/ekaterina.lukasheva/" target="_blank">Ekaterina Lukasheva</a>, crease pattern from the book <a href="https://www.amazon.com/dp/0997311991" target="_blank">Curved Origami</a>.
         </div>
     </div>
 </div>
