--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,11 @@
             <li><a id="navPattern" href="#">Pattern</a></li>
             <li><a id="navSimulation" href="#">Simulation</a></li>
             <li><a id="about" class="menuHoverControls" target="_blank" href="#">About</a></li>
+			
         </ul>
+		 <ul class="nav navbar-nav navbar-right">
+			<li><a id="feedback" target="_blank" href="https://forms.gle/3AERmfpp2hhqBxeP6">Feedback</a></li>
+		 </ul>
         <!--<form class="navbar-form navbar-right" action="#" role="search">-->
             <!--<div class="form-group">-->
               <!--<div class="input-group">-->
@@ -1216,6 +1220,7 @@
 </div>
 <div id="svgViewer"></div>
 <div id="helper">Load more origami patterns here!</div>
+<div id="feedbackNotification"><span>Help Us Improve Origami Simulator</span> <span>&#x279C;</span></div>
 <div id="controlsBottom">
     <div id="viewToggle" class="bigToggle">
         <div>
