links, twitter card

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <meta property="og:image" content="https://origamisimulator.org/assets/doc/strain.jpg">
     <meta property="og:url" content="https://origamisimulator.org/">
 
-    <meta name="twitter:title" content="Origami Simulator ">
+	<meta name="twitter:site" content="@amandaghassaei">
+	<meta name="twitter:creator" content="Amanda Ghassaei">
+    <meta name="twitter:title" content="Origami Simulator">
     <meta name="twitter:description" content=" Real-time WebGL origami simulator app">
+	<meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://origamisimulator.org/assets/doc/strain.jpg">
-    <meta name="twitter:card" content="https://origamisimulator.org/assets/doc/strain.jpg">
 
     <link href="dependencies/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="dependencies/flat-ui.min.css"/>
@@ -881,7 +883,7 @@
 </div><!-- /.modal -->
 <nav id="globalNav" class="navbar navbar-inverse navbar-embossed" role="navigation">
     <div class="navbar-header">
-        <a id="logo" class="navbar-brand" target="_blank" href="http://cba.mit.edu/">
+        <a id="logo" class="navbar-brand" target="_blank" href="https://amandaghassaei.com/">
             <img id="inactiveLogo" src="assets/logo.png"/>
             <img id="activeLogo" src="assets/logo-active.png"/>
         </a>
