add slider control

--- a/index.html
+++ b/index.html
@@ -1261,7 +1261,7 @@
             </div>
         </div>
         <div class="fold-summary">
-            Fold Percent: <span id="foldPercentSimple"></span>% &nbsp;|&nbsp; Key Frame: <span id="keyFrameSummary">1/1</span>
+            Fold Percent: <span id="foldPercentSimple"></span>% &nbsp;|&nbsp; Key Frame: <span id="keyFrameSummary">1/1</span>&nbsp;|&nbsp; Total: <span id="totPercent"></span>%
         </div>
         <!-- <a href="#" id="flatIndicator" class="sliderEndPt smallTxt">
             <span class="sliderEndPtLabel">Flat</span>
