--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,7 @@
                         <li>faces_vertices</li>
                     </ul>
                     You may specify the target fold angle of each crease using the edges_foldAngle field. 
-                    Note that fold angle is a number in degrees lying in the range [âˆ?180, 180]. 
+                    Note that fold angle is a number in degrees lying in the range [âˆ’180, 180]. 
                     The fold angle is positive for valley folds, negative for mountain folds, and zero for flat regions.
                     Accordingly, the sign of edges_foldAngle should match edges_assignment if both are specified.
                     You may also assign a null fold angle to a crease so that it is allowed to move freely - this is especially useful when the fold angle is unknown or the crease pattern is fully constrained and able to be driven by other creases in the system.
