--- a/index.html
+++ b/index.html
@@ -1224,6 +1224,16 @@
 <div id="svgViewer"></div>
 <div id="helper">Load more origami patterns here!</div>
 <div id="feedbackNotification"><span>Help Us Improve Origami Simulator</span> <span>&#x279C;</span></div>
+<div id="creaseSliderContainer">
+    <div class="sliderInput" id="targetAngleBottom">
+        <div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+    </div>
+    <span>Angle: <span id="angleSimple"></span>%</span>
+    <div class="sliderInput" id="stiffnessBottom">
+        <div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+    </div>
+    <span>Stiffness: <span id="stiffnessSimple"></span>%</span>
+</div>
 <div id="controlsBottom">
     <div id="viewToggle" class="bigToggle">
         <div>
