--- a/index.html
+++ b/index.html
@@ -1267,6 +1267,10 @@
             <div class="sliderInput keyframeSlider" id="keyframeTimeline">
                 <div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
             </div>
+            <div class="kfButtonGroup">
+                <button type="button" class="kfButton" id="keyframeDecrement">-</button>
+                <button type="button" class="kfButton" id="keyframeIncrement">+</button>
+            </div>
         </div>
         <div class="fold-summary">
             Fold Percent: <span id="foldPercentSimple"></span>% &nbsp;|&nbsp; Key Frame: <span id="keyFrameSummary">1/1</span>&nbsp;|&nbsp; Total: <span id="totPercent"></span>%
