--- a/index.html
+++ b/index.html
@@ -790,6 +790,7 @@
     <script type="text/javascript" src="js/importer.js"></script>
     <script type="text/javascript" src="js/VRInterface.js"></script>
     <script type="text/javascript" src="js/videoAnimator.js"></script>
+    <script type="text/javascript" src="js/stepFinder.js"></script>
 
     <script type="text/javascript" src="dependencies/cdt2d.js"></script><!-- constrained delaunay triangulation -->
     <script type="text/javascript" src="dependencies/svgpath.js"></script>
