--- a/index.html
+++ b/index.html
@@ -1024,6 +1024,7 @@
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Origami Bases<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
+                            <li><a href="#" class="demo" data-url="Bases/birdBaseSimple.svg">Bird Base (simpl.)</a></li>
                             <li><a href="#" class="demo" data-url="Bases/birdBase.svg">Bird Base</a></li>
                             <li><a href="#" class="demo author" data-author="moveSlowly" data-url="Bases/frogBase.svg">Frog Base</a></li>
                             <li><a href="#" class="demo" data-url="Bases/boatBase.svg">Boat Base</a></li>
