--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
     <script type="text/javascript" src="js/importer.js"></script>
     <script type="text/javascript" src="js/VRInterface.js"></script>
     <script type="text/javascript" src="js/videoAnimator.js"></script>
-    <script type="text/javascript" src="js/stepFinder.js"></script>
+    <!-- <script type="text/javascript" src="js/stepFinder.js"></script> -->
 
     <script type="text/javascript" src="dependencies/cdt2d.js"></script><!-- constrained delaunay triangulation -->
     <script type="text/javascript" src="dependencies/svgpath.js"></script>
@@ -1268,6 +1268,7 @@
         </div>
         Control Mode
     </div>
+    <a href="#" id="stepperBottom" class="btn btn-lg btn-default">Stepper</a>
     <a href="#" id="resetBottom" class="btn btn-lg btn-default">Reset</a>
 </div>
 <div id="controlsLeft" class="flipped">
