packcad link and looks like css file got prettier'ed

--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
 			
         </ul>
 		 <ul class="nav navbar-nav navbar-right">
-			<li><a id="feedback" target="_blank" href="https://forms.gle/3AERmfpp2hhqBxeP6">Feedback</a></li>
+			<li><a id="PackCADLink" href="https://packcad.com/">We're working on something new → PackCAD</a></li>
 		 </ul>
         <!--<form class="navbar-form navbar-right" action="#" role="search">-->
             <!--<div class="form-group">-->
@@ -1223,7 +1223,6 @@
 </div>
 <div id="svgViewer"></div>
 <div id="helper">Load more origami patterns here!</div>
-<div id="feedbackNotification"><span>Help Us Improve Origami Simulator</span> <span>&#x279C;</span></div>
 <div id="controlsBottom">
     <div id="viewToggle" class="bigToggle">
         <div>
